--- a/estilos/style.css
+++ b/estilos/style.css
@@ -44,6 +44,21 @@ iframe#tela {
     height: 471px;
 }
 
-section#social {
+section#redes-sociais {
+    text-align: right;
+}
 
+section#redes-sociais > a > img {
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.746);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.642);
+    transform: translate(-3px, 3px);
+    transition: transform 0.1s, border 0.1s;
 }
